test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_to_void_lvalue.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        None: 
        Pointer: 
          Void: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDereference: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  CFunctionCall: 
                    TIdentifier: foo
                    List[0]: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
